fix: add CSS limit modal label overflow to prevent overlapping with modal buttons

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -620,6 +620,11 @@
 				line-height: 1.5rem;
 				padding-right: 0.5em;
 
+				text-overflow: ellipsis;
+				overflow: hidden;
+				padding-right: 1rem;
+				width: calc(100% - 2.75rem);
+
 				.button {
 					vertical-align: text-bottom;
 					margin-right: 0.5em;
