--- a/core/ts_object/css/ts_object.less
+++ b/core/ts_object/css/ts_object.less
@@ -70,6 +70,7 @@
 			float: left;
 			height: 1.4em;
 			line-height: 1.5rem;
+			z-index: 1; // overlap term hilite
 
     		&:active {
     			opacity: 0.5;
